--- a/www/html/modals/contractDetails.html
+++ b/www/html/modals/contractDetails.html
@@ -26,14 +26,20 @@
                     <div class="progress" style="height: 7px; margin-bottom: 0px;">
                         <div class="progress-bar progress-bar-success" v-bind:style="{ width: Math.ceil(selectedContract.rewardFactor * 10) * 10 + '%' }"></div>
                     </div>
-                    
+
                     <div v-bind:class="{ 'text-danger': expiringDanger(selectedContract.expires), 'text-warning': expiringWarning(selectedContract.expires), 'text-success': expiringSuccess(selectedContract.expires) }">{{readableTime(selectedContract.expires - Date.now())}} remaining</div>
                     <div v-if="selectedContract.contractAmount != undefined">Contract amount: <strong>{{selectedContract.contractAmount}} coins</strong></div>
                     <span>Requires adventurers with:</span>
                     <div v-if="selectedContract.requirements != undefined">
+                        <div v-for="skill in data.skills">
+                            <div v-if="selectedContract.requirements.attributes.filter(sk => sk.type == skill.name)[0] || AdventurerManager().getCurrentPartyAttribute(skill.name) != 0">
+                                <img :alt="skill.name" v-for="n in QuestManager().getCurrentQuestRequiredAndAssignedSkillCount(skill.name)" width="24px" :src="'img/icons/' + get('skills', skill.name).icon + '-green.png'" /><img :alt="skill.name" v-for="n in QuestManager().getCurrentQuestRequiredAndUnassignedSkillCount(skill.name)"
+                                    width="24px" :src="'img/icons/' + get('skills', skill.name).icon + '.png'" />
+                            </div>
+                        </div>
                         <!-- TODO CONVERT TO THIS CODE -->
-                        <span v-for="skill in selectedContract.requirements.attributes" :title="skill.type + ' ' + skill.amount"><img :alt="skill.type" v-for="n in skill.amount" width="24px" :src="'img/icons/' + get('skills', skill.type).icon + '.png'" /></span>
-                            
+                        <!-- <span v-for="skill in selectedContract.requirements.attributes" :title="skill.type + ' ' + skill.amount"><img :alt="skill.type" v-for="n in skill.amount" width="24px" :src="'img/icons/' + get('skills', skill.type).icon + '.png'" /></span> -->
+
                         <!-- <div v-for="attributesRequirement in selectedContract.requirements.attributes">
                             {{attributesRequirement.amount}} {{attributesRequirement.type}} <span v-bind:class="{ 'text-danger': lessthan(AdventurerManager().getCurrentPartyAttribute(attributesRequirement.type), attributesRequirement.amount), 'text-success': !lessthan(AdventurerManager().getCurrentPartyAttribute(attributesRequirement.type), attributesRequirement.amount) }">({{AdventurerManager().getCurrentPartyAttribute(attributesRequirement.type)}}/{{attributesRequirement.amount}})</span>
                         </div> -->
@@ -66,10 +72,10 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn pull-right"  v-if="selectedContract" data-dismiss="modal" v-bind:class="{ 'btn-success': QuestManager().canSendSelectedQuest(), 'btn-primary': !QuestManager().canSendSelectedQuest() }" @click="QuestManager().sendSelectedQuest()"
+                <button type="button" class="btn pull-right" v-if="selectedContract" data-dismiss="modal" v-bind:class="{ 'btn-success': QuestManager().canSendSelectedQuest(), 'btn-primary': !QuestManager().canSendSelectedQuest() }" @click="QuestManager().sendSelectedQuest()"
                     :disabled="!QuestManager().canSendSelectedQuest()">Start</button>
                 <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger pull-left"  v-if="selectedContract" @click="QuestManager().rejectSelectedContract(contract)">Reject</button>
+                <button type="button" class="btn btn-danger pull-left" v-if="selectedContract" @click="QuestManager().rejectSelectedContract(contract)">Reject</button>
                 <button type="button" class="btn btn-info" @click="QuestManager().selectNextContract()">Next</button>
             </div>
         </div>
