--- a/www/html/mainContent.html
+++ b/www/html/mainContent.html
@@ -32,8 +32,7 @@
             </li>
             <li class="" v-if="messages.length != 0">
                 <a style="padding: 1px 2px;" href="#messages" data-toggle="tab" aria-expanded="false">
-                    <img v-if="messages.length == 0" width="32px;" src="./img/icons/scroll-unfurled.png" />
-                    <img v-if="messages.length != 0" width="32px;" src="./img/icons/scroll-unfurled-green.png" />
+                    <img width="32px;" src="./img/icons/scroll-unfurled.png" />
                     <!--<span class="badge">{{messages.length}}</span>-->
                 </a>
             </li>
