--- a/www/html/tabs/noticesTab.html
+++ b/www/html/tabs/noticesTab.html
@@ -1,14 +1,14 @@
 <ul class="nav nav-tabs">
     <li class="active">
-        <a href="#questContracts" data-toggle="tab" aria-expanded="false">Quests <span class="badge">{{LocationManager().getCurrentLocation().availableContracts.length}}</span></a>
+        <a href="#questContracts" data-toggle="tab" aria-expanded="false">Quests <span class="badge">{{LocationManager().getJobContractsAtCurrentLocation()}}</span></a>
     </li>
     <li>
-        <a href="#adventurerContracts" data-toggle="tab" aria-expanded="false">Adventurers <span class="badge">{{LocationManager().getCurrentLocation().availableAdventurers.length}}</span></a>
+        <a href="#adventurerContracts" data-toggle="tab" aria-expanded="false">Adventurers <span class="badge">{{LocationManager().getAdventurerContractsAtCurrentLocation()}}</span></a>
     </li>
 </ul>
 <div id="noticesTabContent" class="tab-content">
     <div class="tab-pane fade active in" id="questContracts">
-        <span v-if="LocationManager().getCurrentLocation().availableContracts.length == 0" class="text-muted text-center col-xs-12">No contracts</span>
+        <!-- <span v-if="LocationManager().getCurrentLocation().availableContracts.length == 0" class="text-muted text-center col-xs-12">No contracts</span> -->
         <button v-if="startAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="startAllContracts()">Start All</button>
         <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
             <div v-for="contract in LocationManager().getCurrentLocation().availableContracts" key="contract.name">
@@ -24,7 +24,7 @@
         </transition-group>
     </div>
     <div class="tab-pane fade" id="adventurerContracts">
-        <span v-if="LocationManager().getCurrentLocation().availableAdventurers.length == 0" class="text-muted text-center col-xs-12">No adventurers for hire</span>
+        <!-- <span v-if="LocationManager().getCurrentLocation().availableAdventurers.length == 0" class="text-muted text-center col-xs-12">No adventurers for hire</span> -->
         <button v-if="hireAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="hireAll()">Hire All</button>
         <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
             <div v-for="notice in LocationManager().getCurrentLocation().availableAdventurers" key="adventurer.name">
