--- a/www/html/tabs/noticesTab.html
+++ b/www/html/tabs/noticesTab.html
@@ -8,20 +8,25 @@
 </ul>
 <div id="noticesTabContent" class="tab-content">
     <div class="tab-pane fade active in" id="questContracts">
-        <!-- <span v-if="LocationManager().getCurrentLocation().availableContracts.length == 0" class="text-muted text-center col-xs-12">No contracts</span> -->
+            <!-- <span v-if="LocationManager().getCurrentLocation().availableContracts.length == 0" class="text-muted text-center col-xs-12">No contracts</span> -->
         <button v-if="startAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="startAllContracts()">Start All</button>
-        <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
-            <div v-for="contract in LocationManager().getCurrentLocation().availableContracts" key="contract.name">
-                <div class="well well-sm">
-                    <h4>
+            <div class="col-md-6 col-lg-4" v-for="contract in LocationManager().getCurrentLocation().availableContracts" key="contract.name">
+
+                    <div class="panel panel-default ">
+                            <div class="panel-heading ">
+                                <h3 class="panel-title ">
                         {{contract.name}}
-                        <button type="button" class="btn btn-sm btn-info pull-right" data-toggle="modal" data-target="#contractDetails" @click="viewContract(contract)">View</button>
-                        <button type="button" class="btn btn-sm btn-danger pull-right" @click="QuestManager().rejectContract(contract)">Reject</button>
-                    </h4>
-                    <div v-bind:class="{ 'text-danger': expiringDanger(contract.expires), 'text-warning': expiringWarning(contract.expires), 'text-success': expiringSuccess(contract.expires) }">{{readableTime(contract.expires - Date.now())}} remaining</div>
-                </div>
+</h3>
+</div>  
+
+<div class="panel-body ">        </div>
+<div class="panel-footer ">
+        <div v-bind:class="{ 'text-danger': expiringDanger(contract.expires), 'text-warning': expiringWarning(contract.expires), 'text-success': expiringSuccess(contract.expires) }">{{readableTime(contract.expires - Date.now())}} remaining
+        <button type="button" class="btn btn-xs btn-info pull-right" data-toggle="modal" data-target="#contractDetails" @click="viewContract(contract)">View</button>
+        <button type="button" class="btn btn-xs btn-danger pull-right" @click="QuestManager().rejectContract(contract)">Reject</button>
+    </div>
+</div>
             </div>
-        </transition-group>
     </div>
     <div class="tab-pane fade" id="adventurerContracts">
         <!-- <span v-if="LocationManager().getCurrentLocation().availableAdventurers.length == 0" class="text-muted text-center col-xs-12">No adventurers for hire</span> -->
