Added DataManager Added TimeManager

--- a/www/html/tabs/messagesTab.html
+++ b/www/html/tabs/messagesTab.html
@@ -6,7 +6,10 @@
 <table class="table table-striped table-hover ">
     <tr v-for="message in messages">
         <td>{{message.message}}</td>
-        <td><span v-if="!options.showMessageTimeAsRealTime">{{getGameTime(message.time).toString()}}</span><span v-if="options.showMessageTimeAsRealTime">{{new Date(message.time).toLocaleString()}}</span></td>
+        <td><span v-if="!options.showMessageTimeAsRealTime">{{TimeManager().getGameTime(message.time).toString()}}</span>
+            <span
+                v-if="options.showMessageTimeAsRealTime">{{new Date(message.time).toLocaleString()}}</span>
+        </td>
         <td>
             <button type="button" class="btn btn-danger btn-xs pull-right" @click="MessageManager().dismissMessage(message)">X
         </td>
