--- a/www/html/tabs/noticesTab.html
+++ b/www/html/tabs/noticesTab.html
@@ -17,7 +17,7 @@
                 </div>
                 <!-- <div class="panel-body"></div> -->
                 <div class="panel-footer">
-                    <div v-bind:class="{ 'text-danger': expiringDanger(contract.expires), 'text-warning': expiringWarning(contract.expires), 'text-success': expiringSuccess(contract.expires) }">{{readableTime(contract.expires - Date.now())}} remaining
+                    <div v-bind:class="{ 'text-danger': expiringDanger(contract.expires), 'text-warning': expiringWarning(contract.expires), 'text-success': expiringSuccess(contract.expires) }">{{TimeManager().readableTime(contract.expires - Date.now())}} remaining
                         <button type="button" class="btn btn-xs btn-info pull-right" data-toggle="modal" data-target="#contractDetails" @click="viewContract(contract)">View</button>
                         <button type="button" class="btn btn-xs btn-danger pull-right" @click="QuestManager().rejectContract(contract)">Reject</button>
                     </div>
@@ -36,8 +36,9 @@
                 </div>
                 <!-- <div class="panel-body"></div> -->
                 <div class="panel-footer">
-                    <div v-bind:class="{ 'text-danger': expiringDanger(notice.expires), 'text-warning': expiringWarning(notice.expires), 'text-success': expiringSuccess(notice.expires) }">{{readableTime(notice.expires - Date.now())}} remaining
-                        <button type="button" class="btn btn-xs pull-right" v-bind:class="{ 'btn-success': AdventurerManager().canHire(notice.adventurer), 'btn-primary': !AdventurerManager().canHire(notice.adventurer) }" @click="AdventurerManager().hire(notice)" :disabled="!AdventurerManager().canHire(notice.adventurer)">Hire ({{AdventurerManager().getCost(notice.adventurer)}} coins)</button></div>
+                    <div v-bind:class="{ 'text-danger': expiringDanger(notice.expires), 'text-warning': expiringWarning(notice.expires), 'text-success': expiringSuccess(notice.expires) }">{{TimeManager().readableTime(notice.expires - Date.now())}} remaining
+                        <button type="button" class="btn btn-xs pull-right" v-bind:class="{ 'btn-success': AdventurerManager().canHire(notice.adventurer), 'btn-primary': !AdventurerManager().canHire(notice.adventurer) }"
+                            @click="AdventurerManager().hire(notice)" :disabled="!AdventurerManager().canHire(notice.adventurer)">Hire ({{AdventurerManager().getCost(notice.adventurer)}} coins)</button></div>
                 </div>
             </div>
 
