--- a/www/html/tabs/questsTab.html
+++ b/www/html/tabs/questsTab.html
@@ -21,9 +21,9 @@
                         </li>
                     </ul>
                     <div class="progress progress-striped active">
-                        <div class="progress-bar" v-bind:style="{ width: expeditionProgress(expedition) + '%' }"></div>
+                        <div class="progress-bar" v-bind:style="{ width: questProgress(expedition) + '%' }"></div>
                     </div>
-                    <div v-bind:class="{ 'text-success': expiringDanger(expedition.expires), 'text-warning': expiringWarning(expedition.expires), 'text-danger': expiringSuccess(expedition.expires) }">{{readableTime(expedition.expires - Date.now())}} remaining</div>
+                    <div v-bind:class="{ 'text-success': expiringDanger(expedition.expires), 'text-warning': expiringWarning(expedition.expires), 'text-danger': expiringSuccess(expedition.expires) }">{{TimeManager().readableTime(expedition.expires - Date.now())}} remaining</div>
                 </div>
             </div>
         </div>
@@ -35,8 +35,8 @@
             <div class="panel" :class="{ 'panel-success': expedition.success, 'panel-danger': !expedition.success}">
                 <div class="panel-heading">
                     <h3 class="panel-title">{{expedition.contract.name}}
-                        <button v-if="expedition.success" type="button" class="btn btn-xs btn-default pull-right" @click="claimReward(expedition)">Claim</button>
-                        <button v-if="!expedition.success" type="button" class="btn btn-xs btn-default pull-right" @click="removeExpedition(expedition)">Dismiss</button>
+                        <button v-if="expedition.success" type="button" class="btn btn-xs btn-default pull-right" @click="QuestManager().claimReward(expedition)">Claim</button>
+                        <button v-if="!expedition.success" type="button" class="btn btn-xs btn-default pull-right" @click="QuestManager().removeQuest(expedition)">Dismiss</button>
                     </h3>
                 </div>
                 <div class="panel-body">
