--- a/www/html/tabs/adventurersTab.html
+++ b/www/html/tabs/adventurersTab.html
@@ -31,7 +31,7 @@
             </div>
         </div>
     </div>
-    <div class="tab-pane fade active in" id="questingAdventurers">
+    <div class="tab-pane fade" id="questingAdventurers">
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Questing')">
             <div class="panel panel-default ">
                 <div class="panel-heading ">
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-    <div class="tab-pane fade active in" id="deadAdventurers">
+    <div class="tab-pane fade" id="deadAdventurers">
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Dead')">
             <div class="panel panel-default ">
                 <div class="panel-heading ">
