--- a/www/html/tabs/noticesTab.html
+++ b/www/html/tabs/noticesTab.html
@@ -17,7 +17,7 @@
                 <!-- <div class="panel-body"></div> -->
                 <div class="panel-footer">
                     <div v-bind:class="{ 'text-danger': expiringDanger(contract.expires), 'text-warning': expiringWarning(contract.expires), 'text-success': expiringSuccess(contract.expires) }">{{TimeManager().readableTime(contract.expires - Date.now())}} remaining
-                        <button type="button" class="btn btn-xs btn-info pull-right" data-toggle="modal" data-target="#contractDetails" @click="viewContract(contract)">View</button>
+                        <button type="button" class="btn btn-xs btn-info pull-right" data-toggle="modal" data-target="#contractDetails" @click="NoticeManager().viewContract(contract)">View</button>
                         <button type="button" class="btn btn-xs btn-danger pull-right" @click="QuestManager().rejectContract(contract)">Reject</button>
                     </div>
                 </div>
