Added SpriteManager Added GameStateManager

--- a/www/html/modals/options.html
+++ b/www/html/modals/options.html
@@ -9,7 +9,7 @@
                 <h4>Options</h4>
             </div>
             <div class="modal-body">
-                <button @click="reset()" type="button" class="btn btn-default" data-dismiss="modal">Reset the Game</button>
+                <button @click="GameStateManager().reset()" type="button" class="btn btn-default" data-dismiss="modal">Reset the Game</button>
 
                 <h3>Autoplay</h3>
                 <div class="checkbox">
