--- a/www/html/tabs/questsTab.html
+++ b/www/html/tabs/questsTab.html
@@ -45,8 +45,8 @@
                         <h4>Rewards</h4>
                         <div v-if="expedition.contract.contractAmount != undefined" class="text-success"><img src="./img/icons/crown-coin.png" width="24px" /> {{expedition.contract.contractAmount}} coins</div>
                         <div v-for="reward in expedition.rewards">
-                            <div class="text-success" v-if="reward.amount"><img :src="getIcon(reward.type)" width="24px" /> {{reward.amount}} {{reward.type}}</div>
-                            <div class="text-success" v-if="reward.type == 'item'"><img :src="getIcon('item')" width="24px" /> {{reward.item.name}}</div>
+                            <div class="text-success" v-if="reward.amount"><img :src="SpriteManager().getIcon(reward.type)" width="24px" /> {{reward.amount}} {{reward.type}}</div>
+                            <div class="text-success" v-if="reward.type == 'item'"><img :src="SpriteManager().getIcon('item')" width="24px" /> {{reward.item.name}}</div>
                         </div>
                     </div>
                     <div v-if="expedition.survivors.length !== 0">
