--- a/www/html/navBar.html
+++ b/www/html/navBar.html
@@ -2,14 +2,15 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+                aria-expanded="false">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
             <span class="navbar-brand" href="#">
-                            {{DataManager().game.name}} <span class="text-muted">v{{version}}</span>
+                            {{DataManager().game.name}} <span class="text-muted">v{{gameState.version}}</span>
             </span>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
