--- a/www/html/tabs/noticesTab.html
+++ b/www/html/tabs/noticesTab.html
@@ -17,7 +17,7 @@
                 <!-- <div class="panel-body"></div> -->
                 <div class="panel-footer">
                     <div v-bind:class="{ 'text-danger': NoticeManager().expiringDanger(contract.expires), 'text-warning': NoticeManager().expiringWarning(contract.expires), 'text-success': NoticeManager().expiringSuccess(contract.expires) }">{{TimeManager().readableTime(contract.expires - Date.now())}} remaining
-                        <button type="button" class="btn btn-xs btn-info pull-right" data-toggle="modal" data-target="#contractDetails" @click="NoticeManager().viewContract(contract)">View</button>
+                        <button type="button" class="btn btn-xs btn-info pull-right" data-toggle="modal" data-target="#contractDetails" @click="NoticeManager().viewContract(contract)">Details</button>
                         <button type="button" class="btn btn-xs btn-danger pull-right" @click="QuestManager().rejectContract(contract)">Reject</button>
                     </div>
                 </div>
@@ -35,7 +35,8 @@
                 <!-- <div class="panel-body"></div> -->
                 <div class="panel-footer">
                     <div v-bind:class="{ 'text-danger': NoticeManager().expiringDanger(notice.expires), 'text-warning': NoticeManager().expiringWarning(notice.expires), 'text-success': NoticeManager().expiringSuccess(notice.expires) }">{{TimeManager().readableTime(notice.expires - Date.now())}} remaining
-                        <button type="button" class="btn btn-xs pull-right" v-bind:class="{ 'btn-success': AdventurerManager().canHire(notice.adventurer), 'btn-primary': !AdventurerManager().canHire(notice.adventurer) }" @click="AdventurerManager().hire(notice)" :disabled="!AdventurerManager().canHire(notice.adventurer)">Hire ({{AdventurerManager().getCost(notice.adventurer)}} coins)</button></div>
+                        <button type="button" class="btn btn-xs pull-right" v-bind:class="{ 'btn-success': AdventurerManager().canHire(notice.adventurer), 'btn-primary': !AdventurerManager().canHire(notice.adventurer) }"
+                            @click="AdventurerManager().hire(notice)" :disabled="!AdventurerManager().canHire(notice.adventurer)">Hire ({{AdventurerManager().getCost(notice.adventurer)}} coins)</button></div>
                 </div>
             </div>
 
