--- a/www/html/tabs/questsTab.html
+++ b/www/html/tabs/questsTab.html
@@ -1,15 +1,15 @@
 <ul class="nav nav-tabs">
     <li class="active">
-        <a href="#runningQuests" data-toggle="tab" aria-expanded="false">Running <span class="badge">{{runningExpeditions.length}}</span></a>
+        <a href="#runningQuests" data-toggle="tab" aria-expanded="false">Running <span class="badge">{{QuestManager().getRunningQuests().length}}</span></a>
     </li>
     <li>
-        <a href="#finishedQuests" data-toggle="tab" aria-expanded="false">Finished <span class="badge">{{completedExpeditions.length}}</span></a>
+        <a href="#finishedQuests" data-toggle="tab" aria-expanded="false">Finished <span class="badge">{{QuestManager().getCompletedQuests().length}}</span></a>
     </li>
 </ul>
 <div id="questTabContent" class="tab-content">
     <div class="tab-pane fade active in" id="runningQuests">
-        <span v-if="runningExpeditions.length == 0" class="text-muted text-center col-xs-12">No running quests</span>
-        <div class="col-md-6" v-for="expedition in runningExpeditions" key="expedition.id">
+        <span v-if="QuestManager().getRunningQuests().length == 0" class="text-muted text-center col-xs-12">No running quests</span>
+        <div class="col-md-6" v-for="expedition in QuestManager().getRunningQuests()" key="expedition.id">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">{{expedition.contract.name}}</h3>
@@ -29,8 +29,8 @@
         </div>
     </div>
     <div class="tab-pane fade" id="finishedQuests">
-        <span v-if="completedExpeditions.length == 0" class="text-muted text-center col-xs-12">No finished quests</span>
-        <div class="col-md-6" v-for="expedition in completedExpeditions" key="expedition.id">
+        <span v-if="QuestManager().getCompletedQuests().length == 0" class="text-muted text-center col-xs-12">No finished quests</span>
+        <div class="col-md-6" v-for="expedition in QuestManager().getCompletedQuests()" key="expedition.id">
             <div class="panel" :class="{ 'panel-success': expedition.success, 'panel-danger': !expedition.success}">
                 <div class="panel-heading">
                     <h3 class="panel-title">{{expedition.contract.name}}
