--- a/www/html/tabs/adventurersTab.html
+++ b/www/html/tabs/adventurersTab.html
@@ -1,16 +1,17 @@
 <ul class="nav nav-tabs">
     <li class="active">
-        <a href="#idleAdventurers" data-toggle="tab" aria-expanded="false">Idle <span class="badge">{{AdventurerManager().countAdventurersAtStatus('Idle')}}</span></a>
+        <a href="#idleAdventurers" data-toggle="tab" aria-expanded="false"><img :src="SpriteManager().getIcon('idle')" width="20px" /><span class="badge">{{AdventurerManager().countAdventurersAtStatus('Idle')}}</span></a>
     </li>
     <li>
-        <a href="#questingAdventurers" data-toggle="tab" aria-expanded="false">Questing <span class="badge">{{AdventurerManager().countAdventurersAtStatus('Questing')}}</span></a>
+        <a href="#questingAdventurers" data-toggle="tab" aria-expanded="false"><img :src="SpriteManager().getIcon('questing')" width="20px" /><span class="badge">{{AdventurerManager().countAdventurersAtStatus('Questing')}}</span></a>
     </li>
     <li>
-        <a href="#deadAdventurers" data-toggle="tab" aria-expanded="false">Dead <span class="badge">{{AdventurerManager().countAdventurersAtStatus('Dead')}}</span></a>
+        <a href="#deadAdventurers" data-toggle="tab" aria-expanded="false"><img :src="SpriteManager().getIcon('dead')" width="20px" /><span class="badge">{{AdventurerManager().countAdventurersAtStatus('Dead')}}</span></a>
     </li>
 </ul>
 <div id="adventurerTabContent" class="tab-content">
     <div class="tab-pane fade active in" id="idleAdventurers">
+        <div class="col-xs-12 text-center text-muted">Idle Adventurers</div>
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Idle')">
             <div class="panel panel-default ">
                 <div class="panel-heading ">
@@ -32,6 +33,7 @@
         </div>
     </div>
     <div class="tab-pane fade" id="questingAdventurers">
+        <div class="col-xs-12 text-center text-muted">Questing Adventurers</div>
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Questing')">
             <div class="panel panel-default ">
                 <div class="panel-heading ">
@@ -53,6 +55,7 @@
         </div>
     </div>
     <div class="tab-pane fade" id="deadAdventurers">
+        <div class="col-xs-12 text-center text-muted">Dead Adventurers</div>
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Dead')">
             <div class="panel panel-default ">
                 <div class="panel-heading ">
