--- a/www/html/tabs/adventurersTab.html
+++ b/www/html/tabs/adventurersTab.html
@@ -15,22 +15,21 @@
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Idle')">
             <div class="panel panel-default ">
                 <div class="panel-heading ">
-                    <h3 class="panel-title ">{{adventurer.name.full}}
-                        <button v-if="adventurer.status=='Idle' " type="button " class="btn btn-info btn-xs pull-right " @click="AdventurerManager().talkTo(adventurer.name.first) ">Talk to {{adventurer.name.first}}</button>
-                    </h3>
+                    <h3 class="panel-title ">{{adventurer.name.full}}</h3>
                 </div>
                 <div class="panel-body ">
+                    <div v-if="adventurer.quote" class="col-xs-12">"<em>{{adventurer.quote}}</em>"</div>
                     <legend>Personal</legend>
-                    <div>Race: <strong>{{adventurer.race.adjective}}</strong></div>
+                    <div>Race: <strong>{{adventurer.race.name}}</strong></div>
                     <div>Occupation: <strong>{{adventurer.type}}</strong></div>
                     <div>Birth Date: <strong>{{TimeManager().getGameTime(adventurer.birthTime).toDateString()}}</strong> (<strong>{{AdventurerManager().getAge(adventurer)}}</strong> years old)</div>
                     <legend>Skills</legend>
                     <span v-for="skill in adventurer.skills " :title="skill.name + ' ' + skill.amount "><img :alt="skill.name " v-for="n in skill.amount " width="24px " :src=" 'img/icons/' + DataManager().getData( 'skills', skill.name).icon + '.png' " /></span>
                     <legend>Employment</legend>
                     <img src="./img/icons/crown-coin.png" width="16px" /> Claims <strong>{{adventurer.wage}}</strong>% of earnings
-                    <div class="col-xs-12">"<em>{{AdventurerManager().getQuote(adventurer)}}</em>"</div>
                 </div>
                 <div class="panel-footer ">
+                    &nbsp;
                     <div class="pull-right ">{{adventurer.experience}}xp</div>
                 </div>
             </div>
@@ -47,7 +46,7 @@
                 </div>
                 <div class="panel-body ">
                     <h4>Personal</h4>
-                    <div>Race: <strong>{{adventurer.race.adjective}}</strong></div>
+                    <div>Race: <strong>{{adventurer.race.name}}</strong></div>
                     <div>Occupation: <strong>{{adventurer.type}}</strong></div>
                     <div>Birth Date: <strong>{{TimeManager().getGameTime(adventurer.birthTime).toDateString()}}</strong> (<strong>{{AdventurerManager().getAge(adventurer)}}</strong> years old)</div>
                     <h4>Skills</h4>
@@ -59,6 +58,7 @@
                     </div>
                 </div>
                 <div class="panel-footer ">
+                    &nbsp;
                     <div class="pull-right ">{{adventurer.experience}}xp</div>
                 </div>
             </div>
@@ -74,15 +74,13 @@
                     </h3>
                 </div>
                 <div class="panel-body ">
-                    <div>Race: <strong>{{adventurer.race.adjective}}</strong></div>
+                    <div>Race: <strong>{{adventurer.race.name}}</strong></div>
                     <div>Occupation: <strong>{{adventurer.type}}</strong></div>
                     <div>Birth Date: <strong>{{TimeManager().getGameTime(adventurer.birthTime).toDateString()}}</strong></div>
                     <span v-for="skill in adventurer.skills " :title="skill.name + ' ' + skill.amount "><img :alt="skill.name " v-for="n in skill.amount " width="24px " :src=" 'img/icons/' + DataManager().getData( 'skills', skill.name).icon + '.png' " /></span>
                 </div>
-                <div class="panel-footer ">
-                    {{adventurer.age}} years old
-                    <div class="pull-right ">{{adventurer.experience}}xp</div>
-                </div>
+                <!-- <div class="panel-footer ">                   
+                </div> -->
             </div>
         </div>
     </div>
