Added statistics to: Achievements, Adventurers, Adventurers have genders

--- a/www/html/tabs/adventurersTab.html
+++ b/www/html/tabs/adventurersTab.html
@@ -47,9 +47,7 @@
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Recovering')">
             <div class="panel panel-default ">
                 <div class="panel-heading ">
-                    <h3 class="panel-title ">{{adventurer.name.full}}
-                        <button v-if="adventurer.status=='Idle' " type="button " class="btn btn-info btn-xs pull-right " @click="AdventurerManager().talkTo(adventurer.name.first) ">Talk to {{adventurer.name.first}}</button>
-                    </h3>
+                    <h3 class="panel-title ">{{adventurer.name.full}}</h3>
                 </div>
                 <div class="panel-body ">
                     <h4>Personal</h4>
@@ -75,9 +73,7 @@
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Questing')">
             <div class="panel panel-default ">
                 <div class="panel-heading ">
-                    <h3 class="panel-title ">{{adventurer.name.full}}
-                        <button v-if="adventurer.status=='Idle' " type="button " class="btn btn-info btn-xs pull-right " @click="AdventurerManager().talkTo(adventurer.name.first) ">Talk to {{adventurer.name.first}}</button>
-                    </h3>
+                    <h3 class="panel-title ">{{adventurer.name.full}}</h3>
                 </div>
                 <div class="panel-body ">
                     <h4>Personal</h4>
@@ -140,9 +136,7 @@
         <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Dead')">
             <div class="panel panel-default ">
                 <div class="panel-heading ">
-                    <h3 class="panel-title ">{{adventurer.name.full}}
-                        <button v-if="adventurer.status=='Idle' " type="button " class="btn btn-info btn-xs pull-right " @click="AdventurerManager().talkTo(adventurer.name.first) ">Talk to {{adventurer.name.first}}</button>
-                    </h3>
+                    <h3 class="panel-title ">{{adventurer.name.full}}</h3>
                 </div>
                 <div class="panel-body ">
                     <div>Race: <strong>{{adventurer.race.name}}</strong></div>
