--- a/www/html/tabs/noticesTab.html
+++ b/www/html/tabs/noticesTab.html
@@ -37,7 +37,7 @@
                     <h3 class="panel-title ">
                         <span style="color:cornflowerblue;" v-if="notice.adventurer.gender == 'male'">&#9794;</span>
                         <span style="color:pink;" v-if="notice.adventurer.gender == 'female'">&#9792;</span>
-                        <span>{{notice.adventurer.race.symbol}}</span>
+                        <span :style="'color:'+notice.adventurer.race.symbolColour">{{notice.adventurer.race.symbol}}</span>
                         <span>{{notice.adventurer.name.full}}</span>
                         <span>({{notice.adventurer.race.adjective}} {{notice.adventurer.type}})</span>
                     </h3>
@@ -47,8 +47,7 @@
                 </div>
                 <div class="panel-footer">
                     <div v-bind:class="{ 'text-danger': NoticeManager().expiringDanger(notice.expires), 'text-warning': NoticeManager().expiringWarning(notice.expires), 'text-success': NoticeManager().expiringSuccess(notice.expires) }">{{TimeManager().readableTime(notice.expires - Date.now())}} remaining
-                        <button type="button" class="btn btn-xs pull-right" v-bind:class="{ 'btn-success': AdventurerManager().canHire(notice.adventurer), 'btn-primary': !AdventurerManager().canHire(notice.adventurer) }"
-                            @click="AdventurerManager().hire(notice)" :disabled="!AdventurerManager().canHire(notice.adventurer)">Hire ({{AdventurerManager().getCost(notice.adventurer)}} coins)</button>
+                        <button type="button" class="btn btn-xs pull-right" v-bind:class="{ 'btn-success': AdventurerManager().canHire(notice.adventurer), 'btn-primary': !AdventurerManager().canHire(notice.adventurer) }" @click="AdventurerManager().hire(notice)" :disabled="!AdventurerManager().canHire(notice.adventurer)">Hire ({{AdventurerManager().getCost(notice.adventurer)}} coins)</button>
                     </div>
                 </div>
             </div>
